--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,6 +16,18 @@
   align-items: center;
 }
 
+.main h1 {
+  font-size: 22px;
+  color: brown;
+  margin: 0;
+  padding: 0;
+}
+
+.main h2 {
+  font-size: 18px;
+  margin-top: 3rem;
+}
+
 .footer {
   width: 100%;
   height: 100px;
@@ -76,7 +88,7 @@
 }
 
 .inputBox {
-  width: 60px;
+  width: 100px;
   font-size: 18px;
   height: 1.8rem;
   margin-left: 5px;
