--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,19 +5,29 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #d4e4e2;
 }
 
 .main {
   padding: 5rem 0;
   display: flex;
-  height: 70vh;
+  height: 50vh;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  text-align: left;
+}
+
+.result{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-bottom: solid 1px;
+  border-bottom-color: #0070f3;
+  margin-bottom: 10px;
 }
 
 .main h1 {
-  font-size: 22px;
+  font-size: 20px;
   color: brown;
   margin: 0;
   padding: 0;
@@ -52,6 +62,7 @@
   line-height: 1.15;
   font-size: 3rem;
   margin-top: 1rem;
+  margin-bottom: 2rem;
   color: #0070f3;
 }
 
@@ -63,7 +74,6 @@
 .inputArea {
   display: flex;
   flex-direction: row;
-  justify-content: center;
   align-items: center;
   width: 500px;
   margin-top: 1rem;
