--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -26,25 +26,20 @@
   margin-bottom: 10px;
 }
 
-.main h1 {
+.main h2 {
   font-size: 20px;
   color: brown;
   margin: 0;
   padding: 0;
 }
 
-.main h2 {
-  font-size: 18px;
-  margin-top: 3rem;
-}
-
 .footer {
   width: 100%;
   height: 100px;
-  border-top: 1px solid #eaeaea;
+  border-top: 1px solid #575656;
   display: flex;
   justify-content: center;
-  align-items: center;
+  
 }
 
 .footer a {
@@ -61,7 +56,6 @@
   margin: 0;
   line-height: 1.15;
   font-size: 3rem;
-  margin-top: 1rem;
   margin-bottom: 2rem;
   color: #0070f3;
 }
